Change argument name to maint-config-id to align with MI experience

--- a/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_pool_maintenance.yaml
+++ b/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_pool_maintenance.yaml
@@ -396,7 +396,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -445,7 +445,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -548,7 +548,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -599,7 +599,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -646,7 +646,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -693,7 +693,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -740,7 +740,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -787,7 +787,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -837,7 +837,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -886,7 +886,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -989,7 +989,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1040,7 +1040,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1087,7 +1087,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1134,7 +1134,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1571,7 +1571,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1620,7 +1620,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1724,7 +1724,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1775,7 +1775,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1822,7 +1822,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1869,7 +1869,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1916,7 +1916,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1963,7 +1963,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2010,7 +2010,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2066,7 +2066,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2117,7 +2117,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2164,7 +2164,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2211,7 +2211,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2258,7 +2258,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
