--- a/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_database_maintenance.yaml
+++ b/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_database_maintenance.yaml
@@ -443,7 +443,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -492,7 +492,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -541,7 +541,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -697,7 +697,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -748,7 +748,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -795,7 +795,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -842,7 +842,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -889,7 +889,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -936,7 +936,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -983,7 +983,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --maintenance-configuration
+      - -g --server --name --edition --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1030,7 +1030,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1079,7 +1079,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1128,7 +1128,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1284,7 +1284,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1335,7 +1335,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1382,7 +1382,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1429,7 +1429,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -1476,7 +1476,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2015,7 +2015,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2064,7 +2064,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2113,7 +2113,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2271,7 +2271,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2322,7 +2322,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2369,7 +2369,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2416,7 +2416,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2463,7 +2463,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2510,7 +2510,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2557,7 +2557,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2604,7 +2604,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2651,7 +2651,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --edition --capacity --maintenance-configuration
+      - -g --server --name --edition --capacity --maint-config-id
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2698,7 +2698,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2747,7 +2747,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2803,7 +2803,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2854,7 +2854,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2901,7 +2901,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2948,7 +2948,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -2995,7 +2995,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -3042,7 +3042,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -3089,7 +3089,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -3136,7 +3136,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -3183,7 +3183,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
@@ -3230,7 +3230,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --server --name --maintenance-configuration --zone-redundant
+      - -g --server --name --maint-config-id --zone-redundant
       User-Agent:
       - python/3.8.0 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-sql/0.26.0 Azure-SDK-For-Python AZURECLI/2.18.0 (MSI)
