--- a/.azure-pipelines/templates/azdev_setup.yml
+++ b/.azure-pipelines/templates/azdev_setup.yml
@@ -14,8 +14,9 @@ steps:
       chmod +x env/bin/activate
       . env/bin/activate
 
-      pip install -q azdev==0.1.29
+      pip install azdev==0.1.29
       azdev --version
+      pylint --version
 
       if [ -z "$CLI_EXT_REPO_PATH" ]; then
         azdev setup -c $CLI_REPO_PATH
